starting to dress things up

--- a/index.html
+++ b/index.html
@@ -2,28 +2,42 @@
 <html dir="ltr" lang="en-us">
 <head>
     <meta charset="utf-8">
-    <title>The Public Health Pledge, committing to safer and more inclusive events</title>
-    <!--link rel="shortcut icon" href="img/favicon.png" type="image/png"-->
+    <title>The Public Health Pledge, committing to safer and more inclusive events #PHPledge</title>
+    <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <link rel="stylesheet" href="main.css" type="text/css">
-    <link rel="stylesheet" href="third_party/bootstrap/css/bootstrap.min.css">
+    <!--link rel="stylesheet" href="third_party/bootstrap/css/bootstrap.min.css"-->
+    <link rel="stylesheet" href="https://joshsimmons.com/third_party/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="third_party/fontawesome/css/all.min.css">
-    <!--meta property="og:image" content="img/og.png"-->
+    <meta property="og:image" content="img/icon.png">
     <meta property="og:description" content="Speakers, organizers, and community leaders are taking The Public Health Pledge, committing to safer and more inclusive events. You can too.">
-    <meta property="og:title" content="The Public Health Pledge, committing to safer and more inclusive events">
-    <meta name="twitter:title" content="The Public Health Pledge, committing to safer and more inclusive events">
+    <meta property="og:title" content="The Public Health Pledge, committing to safer and more inclusive events #PHPledge">
+    <meta name="twitter:title" content="The Public Health Pledge, committing to safer and more inclusive events #PHPledge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body class="bg-light">
-    <header>
-        <h1>The Public Health Pledge</h1>
-        <p>Speakers, organizers, and community leaders are committing to safer and more inclusive events.</p>
+    <header class="navbar navbar-expand flex-column flex-md-row bg-white sticky-top bd-navbar">
+        <a class="navbar-brand mr-0 mr-md-2" href="/" title="The Public Health Pledge #PHPledge">
+            <span class="fa-solid fa-circle-plus"></span>
+        </a>
+        <nav class="navbar-nav-scroll">
+            <ul class="navbar-nav bd-navbar-nav flex-row" id="nav">
+                <li class="nav-item"><a class="nav-link active" href="/">The Public Health Pledge</a></li>
+                <li class="nav-item"><a class="nav-link" href="#"><em>Add your name</em> <span class="fa-solid fa-pen-nib"></span></a></li>
+            </ul>
+        </nav>
+        <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex" id="social">
+            <li class="nav-item"><a class="nav-link social-icon icon-twitter" href="https://twitter.com/PHPledge" title="Twitter" target="_blank"><span class="fab fa-twitter"></span></a></li>
+            <li class="nav-item"><a class="nav-link social-icon icon-envelope" href="mailto:phpledge@googlegroups.com" title="Email phpledge@googlegroups.com" target="_blank"><span class="fa-solid fa-envelope"></span></a></li>
+        </ul>
     </header>
 
-    <main>
+    <main class="container-fluid">
+        <p>Speakers, organizers, and community leaders are committing to safer and more inclusive events.</p>
+
         <!-- prose intro -->
 
-        <h1>The Pledge</h1>
+        <h1>The pledge</h1>
         <p>I pledge to only attend, speak, or participate in events that meet the following criteria:</p>
         <ol>
             <li>The event has a public health policy, and if the public health policy changes it is only strengthened – never weakened – between the event’s announcement and the event itself.</li>
@@ -60,7 +74,7 @@
         <!-- list of individuals, events, and orgs-->
     </main>
 
-    <footer>
+    <footer class="container-fluid">
 
     </footer>
 </body>
