layout/design improvements

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <nav class="navbar-nav-scroll">
             <ul class="navbar-nav bd-navbar-nav flex-row" id="nav">
                 <li class="nav-item"><a class="nav-link active" href="/">The Public Health Pledge</a></li>
-                <li class="nav-item"><a class="nav-link" href="#"><em>Add your name</em> <span class="fa-solid fa-pen-nib"></span></a></li>
             </ul>
         </nav>
         <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex" id="social">
+            <li class="nav-item"><a class="nav-link btn btn-primary" href="https://forms.gle/CuMEJ4NoQzqoamnB9" id="cta-add-your-name"><em>Add your name</em> <span class="fa-solid fa-pen-nib"></span></a></li>
             <li class="nav-item"><a class="nav-link social-icon icon-twitter" href="https://twitter.com/PHPledge" title="Twitter" target="_blank"><span class="fab fa-twitter"></span></a></li>
             <li class="nav-item"><a class="nav-link social-icon icon-envelope" href="mailto:phpledge@googlegroups.com" title="Email phpledge@googlegroups.com" target="_blank"><span class="fa-solid fa-envelope"></span></a></li>
         </ul>
@@ -44,6 +44,8 @@
             <li>The event actively communicates this policy by including it on their website and in the registration flow, placing flyers or posters at the event, and discussing the policy at the start of events.</li>
             <li>The event’s policy includes active measures designed to minimize the number of participants who are infectious, as well as mitigate transmission between participants.</li>
         </ol>
+
+        <a class="btn btn-link" href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib"></span></a>
 
         <!-- get specific, speaking to both organizers and people who want to persuade them
             note that there are many ways to accomplish these things at different event scales and resources, from community to corporate ... the most important thing they can do, which also gets the biggest impact for relatively little effort: require N95 masks indoors 
@@ -70,12 +72,24 @@
         <!-- some prose -->
 
         <h1>Signatories</h1>
-        
+
+        <a class="btn btn-link" href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib"></span></a>
+
         <!-- list of individuals, events, and orgs-->
     </main>
 
     <footer class="container-fluid">
 
+                <p id="footer-links">
+                    <a href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib"></span></a>
+                    <a class="social-icon icon-twitter" href="https://twitter.com/PHPledge" target="_blank">Find us on Twitter <span class="fab fa-twitter"></span></a>
+                    <a class="social-icon icon-twitter" href="https://twitter.com/search?q=%23PHPledge%20OR%20%40PHPledge&src=typed_query" target="_blank">Search #PHPledge on Twitter <span class="fa-solid fa-magnifying-glass"></span></a>
+                    <a class="social-icon icon-envelope" href="mailto:phpledge@googlegroups.com" title="Email phpledge@googlegroups.com" target="_blank">Email us <span class="fa-solid fa-envelope"></span></a>
+                </p>
+
+                <p>
+                    All content licensed under <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                </p>
     </footer>
 </body>
 <script src="main.js"></script>
