swap to local older version of bootstrap

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>The Public Health Pledge, committing to safer and more inclusive events #PHPledge</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/png">
     <link rel="stylesheet" href="main.css" type="text/css">
-    <!--link rel="stylesheet" href="third_party/bootstrap/css/bootstrap.min.css"-->
-    <link rel="stylesheet" href="https://joshsimmons.com/third_party/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="third_party/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="third_party/fontawesome/css/all.min.css">
     <meta property="og:image" content="img/icon.png">
     <meta property="og:description" content="Speakers, organizers, and community leaders are taking The Public Health Pledge, committing to safer and more inclusive events. You can too.">
