refining content and layout

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <nav class="navbar-nav-scroll">
             <ul class="navbar-nav bd-navbar-nav flex-row" id="nav">
                 <li class="nav-item"><a class="nav-link active" href="/">The Public Health Pledge</a></li>
+                <li class="nav-item"><a class="nav-link" href="/guide.html">Organizer Guide</a></li>
             </ul>
         </nav>
         <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex" id="social">
@@ -31,7 +32,7 @@
         </ul>
     </header>
 
-    <main class="container-fluid">
+    <main class="container">
         <p>Speakers, organizers, and community leaders are committing to safer and more inclusive events.</p>
 
         <!-- prose intro -->
@@ -41,7 +42,7 @@
         <ol>
             <li>The event has a public health policy, and if the public health policy changes it is only strengthened – never weakened – between the event’s announcement and the event itself.</li>
             <li>The event actively communicates this policy by including it on their website and in the registration flow, placing flyers or posters at the event, and discussing the policy at the start of events.</li>
-            <li>The event’s policy includes active measures designed to minimize the number of participants who are infectious, as well as mitigate transmission between participants.</li>
+            <li>The event’s policy includes active measures designed to minimize the number of participants who are infected with COVID-19, as well as mitigate transmission between participants.</li>
         </ol>
 
         <a class="btn btn-link" href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib"></span></a>
@@ -50,22 +51,20 @@
             note that there are many ways to accomplish these things at different event scales and resources, from community to corporate ... the most important thing they can do, which also gets the biggest impact for relatively little effort: require N95 masks indoors 
         -->
 
-        <h1>A framework of outcomes and active measures</h1>
-        <h2>Minimize the number of participants who are infectious</h2>
+        <h1>Outcomes and suggested tactics</h1>
+        <h2>Minimize the number of participants who are infected with COVID-19</h2>
         <ul>
-            <li>Vaccinated and up to date with all eligible boosters, or medical or religious exemption, required for entry.</li>
-            <li>Negative test result required for entry, every day if possible.</li>
-            <li>Affirmed lack of symptoms required for entry, every day if possible.</li>
-            <li>Provide easy refunds or alternative modes of participation for participants who test positive before or during the event.</li>
+            <li>Vaccines, including boosters</li>
+            <li>Testing</li>
+            <li>Affirm lack of symptoms</li>
+            <li>Easy out for those who test positive or exhibit symptoms</li>
         </ul>
 
         <h2>Mitigate transmission between participants</h2>
         <ul>
-            <li>Masking required indoors – and outdoors when physical distancing isn’t possible – except when actively eating, drinking, or presenting.</li>
-            <li>Manage indoor air quality by maximizing ventilation with open windows, fans, filtered or non-recirculating HVAC, and other active air purification.</li>
-            <li>Keep activities outdoors as much as possible, especially meals and receptions.</li>
-            <li>Facilitate good hygiene by making hand sanitizer available available anywhere participants are handling materials.</li>
-            <li>Hold all participants – including organizers, volunteers, speakers, VIPs, +1s, and sponsors and their events – to the same standards.</li>
+            <li>Masking indoors, and outdoors when not physically distanced</li>
+            <li>Manage indoor air quality</li>
+            <li>Keep meals and receptions outside</li>
         </ul>
 
         <!-- some prose -->
