refining content and styles

--- a/index.html
+++ b/index.html
@@ -33,26 +33,30 @@
     </header>
 
     <main class="container">
-        <p>Speakers, organizers, and community leaders are committing to safer and more inclusive events.</p>
+        <p class="lead">Speakers, organizers, and community leaders are committing to safer and more inclusive events. You can too.</p>
 
-        <!-- prose intro -->
+        <div class="card">
+            <div class="card-header">
+                <h1>The pledge</h1>
+            </div>
+            <div class="card-body">
+                <p>I pledge to only attend, speak, or participate in events that meet the following criteria:</p>
+                <ol>
+                    <li>The event has a public health policy, and if the public health policy changes it is only strengthened – never weakened – between the event’s announcement and the event itself.</li>
+                    <li>The event actively communicates this policy by including it on their website and in the registration flow, placing flyers or posters at the event, and discussing the policy at the start of events.</li>
+                    <li>The event’s policy includes active measures designed to minimize the number of participants who are infected with COVID-19, as well as mitigate transmission between participants.</li>
+                </ol>
 
-        <h1>The pledge</h1>
-        <p>I pledge to only attend, speak, or participate in events that meet the following criteria:</p>
-        <ol>
-            <li>The event has a public health policy, and if the public health policy changes it is only strengthened – never weakened – between the event’s announcement and the event itself.</li>
-            <li>The event actively communicates this policy by including it on their website and in the registration flow, placing flyers or posters at the event, and discussing the policy at the start of events.</li>
-            <li>The event’s policy includes active measures designed to minimize the number of participants who are infected with COVID-19, as well as mitigate transmission between participants.</li>
-        </ol>
-
-        <a class="btn btn-link" href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib"></span></a>
+                <a class="btn btn-link" href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib"></span></a>
+            </div>
+        </div>
 
         <!-- get specific, speaking to both organizers and people who want to persuade them
             note that there are many ways to accomplish these things at different event scales and resources, from community to corporate ... the most important thing they can do, which also gets the biggest impact for relatively little effort: require N95 masks indoors 
         -->
 
-        <h1>Outcomes and suggested tactics</h1>
-        <h2>Minimize the number of participants who are infected with COVID-19</h2>
+        <p class="lead">Outcomes and types of measures</p>
+        <p>Minimize the number of participants who are infected with COVID-19</p>
         <ul>
             <li>Vaccines, including boosters</li>
             <li>Testing</li>
@@ -60,18 +64,24 @@
             <li>Easy out for those who test positive or exhibit symptoms</li>
         </ul>
 
-        <h2>Mitigate transmission between participants</h2>
+        <p>Mitigate transmission between participants</p>
         <ul>
             <li>Masking indoors, and outdoors when not physically distanced</li>
             <li>Manage indoor air quality</li>
             <li>Keep meals and receptions outside</li>
         </ul>
 
-        <!-- some prose -->
-
-        <h1>Signatories</h1>
+        <a class="btn btn-link" href="/guide.html">Read helpful details and discussion in the Organizer Guide <span class="fa-solid fa-compass"></span></a><br>
 
         <a class="btn btn-link" href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib"></span></a>
+
+        <!-- some prose -->
+
+        <p class="lead">Signatories</p>
+
+        <ul class="list-unstyled">
+            <li>Joshua R. Simmons, a booster for the commons</li>
+        </ul>
 
         <!-- list of individuals, events, and orgs-->
     </main>
@@ -82,7 +92,7 @@
                     <a href="https://forms.gle/CuMEJ4NoQzqoamnB9"><em>Add your name</em> <span class="fa-solid fa-pen-nib"></span></a>
                     <a class="social-icon icon-twitter" href="https://twitter.com/PHPledge" target="_blank">Find us on Twitter <span class="fab fa-twitter"></span></a>
                     <a class="social-icon icon-twitter" href="https://twitter.com/search?q=%23PHPledge%20OR%20%40PHPledge&src=typed_query" target="_blank">Search #PHPledge on Twitter <span class="fa-solid fa-magnifying-glass"></span></a>
-                    <a class="social-icon icon-envelope" href="mailto:phpledge@googlegroups.com" title="Email phpledge@googlegroups.com" target="_blank">Email us <span class="fa-solid fa-envelope"></span></a>
+                    <a class="social-icon icon-envelope" href="mailto:phpledge@googlegroups.com" title="Email phpledge@googlegroups.com" target="_blank">Email <span class="fa-solid fa-envelope"></span></a>
                 </p>
 
                 <p>
