start using Health and Safety language

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="card-body">
                 <p>I pledge to only attend, speak, or participate in events that meet the following criteria:</p>
                 <ol>
-                    <li>The event has a public health policy, and if the public health policy changes it is only strengthened – never weakened – between the event’s announcement and the event itself.</li>
+                    <li>The event has a Hublic and Safety policy, and if the policy changes it is only strengthened – never weakened – between the event’s announcement and the event itself.</li>
                     <li>The event actively communicates this policy by including it on their website and in the registration flow, placing flyers or posters at the event, and discussing the policy at the start of events.</li>
                     <li>The event’s policy includes active measures designed to minimize the number of participants who are infected with COVID-19, as well as mitigate transmission between participants.</li>
                 </ol>
