extended typo fix

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <h1 class="lead">How to make events more safe and inclusive</h1>
 
-        <p>There is no one size fits all solution that covers events small and large, public and private, nonprofit and for-profit. However, there is a suite of tools that are well established in public health.</p>
+        <p>There is no one size fits all solution that covers events small and large, public and private, nonprofit and for-profit. However, there is a suite of tools well established in public health.</p>
 
         <p>We will be launching an initial Organizer Guide in the coming days, which we will iterate on in conversation with community leaders and experts. The goal is to co-create practices that speak to many different situations, and provide organizers with as much information and as many tools as we can to ease each other's work toward raising the bar.</p>
         
