good morning new signatories!

--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
             <li><a href="https://incl.ca/">Nicolas Steenhout</a>, Accessibility Consultant, CAPS member</li>
             <li><a href="https://twitter.com/taylor_atx">Taylor Barnett</a>, Staff Developer Advocate, former Co-chair of API Specifications Conference</li>
             <li><a href="https://daisy.wtf">Daisy Leigh Brenecki</a>, Conference Director, PyCon AU 2020 and 2023</li>
+            <li><a href="https://www.communi-tea.io/">Monica Ayhens-Madon, </a>Independent Community Facilitator</li>
+            <li><a href="https://twitter.com/sdmouton">Shaun Mouton</a>, Friendgineer, Organizer</li>
+            <li><a href="https://twitter.com/cczone">Carina C. Zona</a>, Developer advocate, CallbackWomen founder, @CoCpledge account maintainer</li>
+            <li><a href="https://twitter.com/larsmb">Lars Marowsky-Brée</a>, Distinguished Engineer</li>
+            <li><a href="https://twitter.com/mattstratton">Matty Stratton</a>, Global Organizer, DevOpsDays</li>
         </ul>
 
     </main>
