one more morning push for good measure

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             <li><a href="https://twitter.com/cczone">Carina C. Zona</a>, Developer advocate, CallbackWomen founder, @CoCpledge account maintainer</li>
             <li><a href="https://twitter.com/larsmb">Lars Marowsky-Brée</a>, Distinguished Engineer</li>
             <li><a href="https://twitter.com/mattstratton">Matty Stratton</a>, Global Organizer, DevOpsDays</li>
+            <li>Alexander Dietrich</li>
         </ul>
 
     </main>
