--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
             <li><a href="https://twitter.com/larsmb">Lars Marowsky-Brée</a>, Distinguished Engineer</li>
             <li><a href="https://twitter.com/mattstratton">Matty Stratton</a>, Global Organizer, DevOpsDays</li>
             <li>Alexander Dietrich</li>
+            <li>Joan Liu, Product Manager</li>
+            <li><a href="https://vmbrasseur.com">VM Brasseur</a>, corporate strategist, open source & technical leader, author, speaker</li>
         </ul>
 
     </main>
