JHU OSPO represent!

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
             <li>Alexander Dietrich</li>
             <li>Joan Liu, Product Manager</li>
             <li><a href="https://vmbrasseur.com">VM Brasseur</a>, corporate strategist, open source & technical leader, author, speaker</li>
+            <li><a href="https://twitter.com/eSayeed">Sayeed Choudhury</a>, Director of OSPO</a></li>
         </ul>
 
     </main>
