--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
             <li>Alexander Dietrich</li>
             <li>Joan Liu, Product Manager</li>
             <li><a href="https://vmbrasseur.com">VM Brasseur</a>, corporate strategist, open source & technical leader, author, speaker</li>
-            <li><a href="https://twitter.com/eSayeed">Sayeed Choudhury</a>, Director of OSPO</a></li>
+            <li><a href="https://twitter.com/eSayeed">Sayeed Choudhury</a>, Director of OSPO</li>
+            <li><a href="https://twitter.com/jimjag">Jim Jagielski</a>, Co-founder Apache Software Foundation; Emeritus Director OSI; Open Source Developer, Advocate and Luminary</li>
         </ul>
 
     </main>
