--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             <li><a href="https://twitter.com/eSayeed">Sayeed Choudhury</a>, Director of OSPO</li>
             <li><a href="https://twitter.com/jimjag">Jim Jagielski</a>, Co-founder Apache Software Foundation; Emeritus Director OSI; Open Source Developer, Advocate and Luminary</li>
             <li><a href="https://www.katschthaler.com">Kai Katschthaler</a>, DevRel and Content Specialist</li>
+            <li><a href="https://github.com/finnporter">Finn Porter</a>, Software Engineer</li>
         </ul>
 
     </main>
