--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             <li><a href="https://www.katschthaler.com">Kai Katschthaler</a>, DevRel and Content Specialist</li>
             <li><a href="https://github.com/finnporter">Finn Porter</a>, Software Engineer</li>
             <li><a href="https://KiwiPyCon.nz">Carlos Cordero</a>, Kiwi PyCon 2022 & 2023 conference director</li>
+            <li><a href="https://twitter.com/catsintents">Selene Pastelski</a>, Software Engineer at GitHub</li>
         </ul>
 
     </main>
