--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
             <li><a href="https://github.com/finnporter">Finn Porter</a>, Software Engineer</li>
             <li><a href="https://KiwiPyCon.nz">Carlos Cordero</a>, Kiwi PyCon 2022 & 2023 conference director</li>
             <li><a href="https://twitter.com/catsintents">Selene Pastelski</a>, Software Engineer at GitHub</li>
+            <li><a href="https://twitter.com/sarasomewhere">Sara Safavi</a>, Developer Experience leader; conference speaker and organizer </li>
+            <li><a href="http://www.twitter.com/xomiamoore">Mia Moore</a>, Technical Community Builder/Developer Relations</li>
         </ul>
 
     </main>
