--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@
             <li><a href="https://twitter.com/catsintents">Selene Pastelski</a>, Software Engineer at GitHub</li>
             <li><a href="https://twitter.com/sarasomewhere">Sara Safavi</a>, Developer Experience leader; conference speaker and organizer </li>
             <li><a href="http://www.twitter.com/xomiamoore">Mia Moore</a>, Technical Community Builder/Developer Relations</li>
+            <li><a href="https://twitter.com/_phzn">Kevin Lewis</a>, Director, You Got This!</li>
+            <li><a href="https://twitter.com/pieschker">Renee Pieschke</a>, Technical Project Manager, Radiant Earth Foundation</li>
+            <li><a href="https://twitter.com/jna_sh">Joe Nash</a>, Developer Educator, Twilio</li>
         </ul>
 
     </main>
@@ -147,7 +150,7 @@
                 </p>
 
                 <p>
-                    Last updated 2022-10-24. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2022-10-25. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
