--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             <li><a href="https://twitter.com/_phzn">Kevin Lewis</a>, Director, You Got This!</li>
             <li><a href="https://twitter.com/pieschker">Renee Pieschke</a>, Technical Project Manager, Radiant Earth Foundation</li>
             <li><a href="https://twitter.com/jna_sh">Joe Nash</a>, Developer Educator, Twilio</li>
+            <li>Benno Rice, Over-Opinionated Engineer (v/rare)</li>
         </ul>
 
     </main>
