--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
             <li><a href="https://twitter.com/pieschker">Renee Pieschke</a>, Technical Project Manager, Radiant Earth Foundation</li>
             <li><a href="https://twitter.com/jna_sh">Joe Nash</a>, Developer Educator, Twilio</li>
             <li>Benno Rice, Over-Opinionated Engineer (v/rare)</li>
+            <li><a href="https://twitter.com/develuxiness">Jan Eckhoff</a>, UX Consultant</li>
         </ul>
 
     </main>
