--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <li><a href="https://twitter.com/jna_sh">Joe Nash</a>, Developer Educator, Twilio</li>
             <li>Benno Rice, Over-Opinionated Engineer (v/rare)</li>
             <li><a href="https://twitter.com/develuxiness">Jan Eckhoff</a>, UX Consultant</li>
+            <li><a href="https://bitprophet.org">Jeff Forcier</a>, Developer/sysadmin, startups/finance</li>
         </ul>
 
     </main>
