--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
             <li>Benno Rice, Over-Opinionated Engineer (v/rare)</li>
             <li><a href="https://twitter.com/develuxiness">Jan Eckhoff</a>, UX Consultant</li>
             <li><a href="https://bitprophet.org">Jeff Forcier</a>, Developer/sysadmin, startups/finance</li>
+            <li><a href="https://twitter.com/harrisja">Jason Harris</a>, Principal Evangelist, 1Password</li>
         </ul>
 
     </main>
