--- a/index.html
+++ b/index.html
@@ -140,6 +140,8 @@
             <li><a href="https://twitter.com/develuxiness">Jan Eckhoff</a>, UX Consultant</li>
             <li><a href="https://bitprophet.org">Jeff Forcier</a>, Developer/sysadmin, startups/finance</li>
             <li><a href="https://twitter.com/harrisja">Jason Harris</a>, Principal Evangelist, 1Password</li>
+            <li><a href="https://floss.social/@downey">Michael Downey</a>, Software freedom and digital rights advocate</li>
+            <li><a href="https://opentechstrategies.com">James Vasile</a>, Open Tech Strategies</li>	
         </ul>
 
     </main>
