re-remove sticky header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="bg-light">
-    <header class="navbar navbar-expand flex-column flex-md-row bg-white sticky-top bd-navbar">
+    <header class="navbar navbar-expand flex-column flex-md-row bg-white bd-navbar">
         <a class="navbar-brand mr-0 mr-md-2" href="/">
             <span class="fa-solid fa-circle-plus" aria-hidden="true"></span>
             <span class="sr-only">The Public Health Pledge #PHPledge</span>
