remove unnecessary list for a11y

--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
 </head>
 
 <body class="bg-light">
-    <header class="navbar navbar-expand flex-column flex-md-row bg-white bd-navbar">
+
+    <header class="navbar navbar-expand flex-column flex-md-row bg-white bd-navbar">    
         <a class="navbar-brand mr-0 mr-md-2" href="/">
             <span class="fa-solid fa-circle-plus" aria-hidden="true"></span>
             <span class="sr-only">The Public Health Pledge #PHPledge</span>
         </a>
         <nav class="navbar-nav-scroll">
-            <ul class="navbar-nav bd-navbar-nav flex-row" id="nav">
-                <li class="nav-item"><a class="nav-link active" href="/">The Public Health Pledge</a></li>
-            </ul>
+            <div class="navbar-nav bd-navbar-nav flex-row" id="nav">
+                <span class="nav-item"><a class="nav-link active" href="/">The Public Health Pledge</a></span>
+            </div>
         </nav>
+
         <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex" id="social">
             <li class="nav-item"><a class="nav-link btn btn-primary" href="https://forms.gle/CuMEJ4NoQzqoamnB9" id="cta-add-your-name"><em>Add your name</em> <span class="fa-solid fa-pen-nib" aria-hidden="true"></span></a></li>
             <li class="nav-item"><a class="nav-link social-icon icon-twitter" href="https://twitter.com/PHPledge"><span class="fab fa-twitter" aria-hidden="true"></span><span class="sr-only">@PHPledge on Twitter, opens in a new window</span></a></li>
