--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             <li><a href="https://floss.social/@downey">Michael Downey</a>, Software freedom and digital rights advocate</li>
             <li><a href="https://opentechstrategies.com">James Vasile</a>, Open Tech Strategies</li>
             <li>Robert O'Connor, Full Stack Developer</li>
+            <li><a href="https://twitter.com/melissakaulfuss">Mel Kaulfuss</a>, Lead Developer Advocate</li>
         </ul>
 
     </main>
