PyCon AU and Kiwi PyCon are on it!

--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
             <li><a href="https://opentechstrategies.com">James Vasile</a>, Open Tech Strategies</li>
             <li>Robert O'Connor, Full Stack Developer</li>
             <li><a href="https://twitter.com/melissakaulfuss">Mel Kaulfuss</a>, Lead Developer Advocate</li>
+            <li>Richard Jones, PyCon AU Steering Committee Leader Person</li>
         </ul>
 
     </main>
