last(?) addition for the day

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
             <li>Robert O'Connor, Full Stack Developer</li>
             <li><a href="https://twitter.com/melissakaulfuss">Mel Kaulfuss</a>, Lead Developer Advocate</li>
             <li>Richard Jones, PyCon AU Steering Committee Leader Person</li>
+            <li>Ti Wilson-Brown, Software Engineer, Activist</li>
         </ul>
 
     </main>
