first batch of today's signatories

--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@
             <li><a href="https://twitter.com/melissakaulfuss">Mel Kaulfuss</a>, Lead Developer Advocate</li>
             <li>Richard Jones, PyCon AU Steering Committee Leader Person</li>
             <li>Ti Wilson-Brown, Software Engineer, Activist</li>
+            <li>Jared Synn</li>
+            <li><a href="https://jollypm.com/">Robert Jolly</a>, Product + Accessibility Management</li>
+            <li>Rowena Specht-Whyte, Disabled activist and advocate</li>
+            <li><a href="https://twitter.com/owenblacker">Owen Blacker</a>, Technologist, and governance team member Wikimedia LGBT+ User Group</li>
+            <li><a href="https://twitter.com/nickyringland">Nicky Ringland</a>, PyCon AU Education Track organiser</li>
+            <li><a href="https://alvin.codes/">Alvin Bryan</a>, Developer Advocate</li>
+            <li><a href="https://duckalignment.academy">Ben Cotton</a>, Open source contributor and author</li>
+            <li>Pragati Rai</li>
+            <li>Mica Swyers, Developer Educator</li>
         </ul>
 
     </main>
@@ -165,7 +174,7 @@
                 </p>
 
                 <p>
-                    Last updated 2022-10-25. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
+                    Last updated 2022-10-26. All content licensed <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero v1.0 Universal</a>.
                 </p>
     </footer>
 </body>
