--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
             <li><a href="https://duckalignment.academy">Ben Cotton</a>, Open source contributor and author</li>
             <li>Pragati Rai</li>
             <li>Mica Swyers, Developer Educator</li>
+            <li><a href="https://chriswiegman.com/">Chris Wiegman</a>, Engineering Manager</li>
         </ul>
 
     </main>
