--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
             <li>Pragati Rai</li>
             <li>Mica Swyers, Developer Educator</li>
             <li><a href="https://chriswiegman.com/">Chris Wiegman</a>, Engineering Manager</li>
+            <li>Lena Freund, Nobody</li>
         </ul>
 
     </main>
