--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
             <li>Mica Swyers, Developer Educator</li>
             <li><a href="https://chriswiegman.com/">Chris Wiegman</a>, Engineering Manager</li>
             <li>Lena Freund, Nobody</li>
+            <li>Chalis Montgomery, Organizer</li>
         </ul>
 
     </main>
