--- a/index.html
+++ b/index.html
@@ -163,6 +163,9 @@
             <li><a href="https://chriswiegman.com/">Chris Wiegman</a>, Engineering Manager</li>
             <li>Lena Freund, Nobody</li>
             <li>Chalis Montgomery, Organizer</li>
+            <li><a href="https://cecinestpasun.com">Russell Keith-Magee</a>, Founder, BeeWare Project; PyCon AU Organizing committee</li>
+            <li><a href="https://ldpreload.com">Geoffrey Thomas</a>, Software Engineer</li>
+            <li>Scott Larsen</li>
         </ul>
 
     </main>
