--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
             <li><a href="https://cecinestpasun.com">Russell Keith-Magee</a>, Founder, BeeWare Project; PyCon AU Organizing committee</li>
             <li><a href="https://ldpreload.com">Geoffrey Thomas</a>, Software Engineer</li>
             <li>Scott Larsen</li>
+            <li><a href="https://www.covidpledge.co.nz">Dr Stuart Ekdahl</a>, project lead at www.covidpledge.co.nz</li>
         </ul>
 
     </main>
