--- a/index.html
+++ b/index.html
@@ -167,6 +167,8 @@
             <li><a href="https://ldpreload.com">Geoffrey Thomas</a>, Software Engineer</li>
             <li>Scott Larsen</li>
             <li><a href="https://www.covidpledge.co.nz">Dr Stuart Ekdahl</a>, project lead at www.covidpledge.co.nz</li>
+            <li>Ellen Doornbos, CPWA, Accessibility Consultant</li>
+            <li><a href="https://linktr.ee/jritten">Jenna Ritten</a>, Lead Architect & Chief Developer Advocate, InnerSource@IBM & Developer Advocacy</li>
         </ul>
 
     </main>
