one more signatory!

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
             <li>Marielle Cristobal, Family Physician</li>
             <li><a href="https://oursaintfrancis.org">Bishop Gregory Godsey</a>, Senior Pastor; Saint Francis Parish and Outreach, Augusta, GA</li>
             <li>Lorna Gillen, Physician</li>
+            <li><a href="https://twitter.com/glunardi">Guy Lunardi</a>, VP Business Development @ Collabora</li>
         </ul>
 
     </main>
